# machine_learning_from_scratch

./: .gitignore  README.md  pyproject.toml
decision_tree/: decision_tree.md  decision_tree.py  demo.py
gaussian_process_regression/: demo.py  gaussian_process_regression.py
neural_network/: demo.py  neural_network.py
random_forest/: decision_tree.py  demo.py  random_forest.md  random_forest.py
support_vector_machine/: demo.py  support_vector_machine.py
utils/: metrics.py  show_or_save.py
